# Dependent-Lambda

./: Common.hs  Context.hs  DLam.cabal  Datatype.hs  DeL.cabal  Desugar.hs  Elab.hs  Equality.hs  Error.hs  Lang.hs  Main.hs  MonadTypeCheck.hs  PPrint.hs  Parse.hs  PartialOrder.hs  README.md  Reduce.hs  Resugar.hs  SLang.hs  Substitution.hs  Termination.hs  Transitive.hs  TypeCheck.hs  Unify.hs  UnionFind.hs  informe.md  test.dlam  utils.md
tests/: data.del  data.dlam  data1.del  data1.dlam  pprint.del  test.del  test.dlam  test1.del  test1.dlam  test2.del  test2.dlam  testlist.del
