cabal-version:      2.4
name:               DLam
version:            0.1.0

executable DLam
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Lang
      Parse
      TypeCheck
      Error
      Context
      MonadTypeCheck
      UnionFind
      Unify
      Reduce
      Equality
      Termination
      Transitive
      Substitution
      Elab
      Common
      Datatype
      PPrint
      Desugar
    ghc-options: 
        -threaded 
        -rtsopts 
        -with-rtsopts=-N 
    -- other-extensions:
    build-depends:    
          base >=4.7
        , parsec
        , pretty
        , prettyprinter
        , prettyprinter-ansi-terminal
        , text
        , mtl
        , disjoint-containers
        , extra
        , optparse-applicative
    default-extensions:
          DuplicateRecordFields